# School

./: .gitignore  .gitignore.txt  Technical Paper Guidelines.docx
1 Wake Up Fishy!!/Fall/IntroToEngineering/: Ethics_ABET_Case_01.docx
1 Wake Up Fishy!!/Fall/Prob&Stat/: Project Scatterplots.docx
1 Wake Up Fishy!!/Fall/Speech/: Listening Assignment Fall 2017.docx  Narrative Speech Plan.docx  Personal Report of Communication Apprehension.docx
1 Wake Up Fishy!!/Fall/University 101/: 2017 Activities Fair Assignment.docx
2 SMores/CUNIX/: CMakeLists.txt
2 SMores/CUNIX/Homeworks/Homework3/: generateLittleEndian.c
2 SMores/CUNIX/Homeworks/Homework4/: simpleStat.c
2 SMores/CUNIX/Homeworks/Homework5/: doublyLinkedList.c
2 SMores/CUNIX/Practice1/: SampleExam1Question.c  calc.c  warmpup2-14.c
2 SMores/Database/HW1/: HW1.docx  (+1 more)
3 Serious/CompArt/: HW1.docx
3 Serious/PythonGrades/: feedback.txt  tests.txt
3 Serious/Senior Design/: DavidJefts_EngineeringNotebook.docx  HW1.docx  project_segment_choices.docx
Clubs/SHPE/: Off Campus Involvement.docx  SHPE Alpha Eagle Scholarship.docx
Internships/: INSTRUCTIONS_for_SUBMIT_FINAL_FORMS_3_2018.doc
Internships/Cray/: Cray_SU18_Jefts_David.docx
Internships/Metecs/: METECS_SU19_Jefts_David.docx  School Internship Contract  ims_queries.py
SMores/AI/: Class+Lecture+Student+Evaluation+Form.docx
SMores/CUNIX/: CMakeLists.txt
SMores/Grad SQA/: GradPaper.tex  bibliography.bib
SMores/NumA/: CMakeLists.txt  ReportTemplate.tex  Syllabus348sp19.doc  plan.xlsx
SMores/Org of Prog Langs/: SierpinskiTriangle.rkt
(+359 files in other folders)
